# kedia

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/lib/: CMakeLists.txt  drive.cpp  episode.cpp  file.cpp  media.cpp  season.cpp  series.cpp
src/lib/include/: drive.hpp  episode.hpp  file.hpp  media.hpp  season.hpp  series.hpp
src/manager/: CMakeLists.txt  CreateDrive.cpp  CreateEpisode.cpp  CreateSeason.cpp  CreateSeries.cpp  MainWindow.cpp  main.cpp  manager_utils.cpp
src/manager/include/: CreateDrive.h  CreateEpisode.h  CreateSeason.h  CreateSeries.h  MainWindow.h  abstractmedia.hpp  manager_utils.hpp
src/manager/ui/: CreateDrive.ui  CreateEpisode.ui  CreateSeason.ui  CreateSeries.ui  MainWindow.qrc  MainWindow.ui  Stage.ui
src/store/: CMakeLists.txt  database.cpp  main.cpp  store.cpp
src/store/include/: database.hpp  store.hpp
src/store/resources/: init.sql
test/lib/: CMakeLists.txt  seriestest.cpp
test/lib/include/: seriestest.hpp
test/manager/: CMakeLists.txt  entrytest.cpp
test/store/: CMakeLists.txt  storetest.cpp
